fix: improve overlay image link contrast

--- a/components/ui/Chat/Image/Overlay/Overlay.less
+++ b/components/ui/Chat/Image/Overlay/Overlay.less
@@ -22,7 +22,7 @@
       }
     }
     a {
-      color: @gray;
+      color: @text-muted;
       display: flex;
       margin-right: auto;
       &:hover,
